# wagtail-lite-youtube-embed

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
lite_youtube_embed/: __init__.py  embed.py
tests/: settings.py  tests.py
