[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-lite-youtube-embed"
description = ""
authors = [
    {name = "Jake Howard"},
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved",
    "License :: OSI Approved :: BSD License",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Typing :: Typed"
]
requires-python = ">=3.8"

dependencies = [
    "wagtail>=5.2",
    "Django>=4.2"
]

[project.urls]
Source = "https://github.com/RealOrangeOne/wagtail-lite-youtube-embed"
Issues = "https://github.com/RealOrangeOne/wagtail-lite-youtube-embed/issues"
Changelog = "https://github.com/RealOrangeOne/wagtail-lite-youtube-embed/releases"

[tool.flit.module]
name = "lite_youtube_embed"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]


[tool.ruff]
select = ["E", "F", "I", "W", "N", "B", "A", "C4"]
ignore = ["E501"]
